--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link
             rel="stylesheet"
-            href="./CSS/styles.css"/>
+            href="./css/styles.css"/>
         <link
             rel="preconnect"
             href="https://fonts.googleapis.com">
