--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     <header class="header">
 
         <nav class="header-navigation">
-            <a class="header-logo" href="./index.html">Web <span class="header-logo-accent">Studio</span></a>
+            <a class="header-logo" href="./index.html">Web<span class="header-logo-accent">Studio</span></a>
             <ul class="header-menu-list">
-                <li class="header-menu-item"><a class="header-menu-link" href="">Studio</a></li>
+                <li class="header-menu-item"><a class="header-menu-link" href="./index.html">Studio</a></li>
                 <li class="header-menu-item"><a class="header-menu-link" href="">Portfolio</a></li>
                 <li class="header-menu-item"><a class="header-menu-link" href="">Contacts</a></li>
             </ul>
