--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         </section>
 
         <section class="features">
+            <h2 class="headline-h2">Services</h2>
             <ul class="features-list">
                 <li class="featutes-item">
                     <h3 class="headline-h3">Strategy</h3>
