--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 
     <main>
         <section class="hero">
-            <h1 class="headline-h1">Effective Solutions for Your Business</h1>
+            <h1 class="page-title">Effective Solutions for Your Business</h1>
             <button class="primary-button">Order Service</button>
         </section>
 
         <section class="features">
-            <h2 class="headline-h2">Services</h2>
+            <h2 class="section-headline">Services</h2>
             <ul class="features-list">
                 <li class="featutes-item">
                     <h3 class="headline-h3">Strategy</h3>
@@ -84,7 +84,7 @@
         </section>
 
         <section class="team">
-            <h2 class="headline-h2">Our Team</h2>
+            <h2 class="section-headline">Our Team</h2>
             <ul class="team-list">
                 <li class="team-item">
                     <img
@@ -129,7 +129,7 @@
         </section>
 
         <section class="our-portfolio">
-            <h2 class="headline-h2">Our Portfolio</h2>
+            <h2 class="section-headline">Our Portfolio</h2>
             <ul class="portfolio-list">
             <li class="portfolio-item">
                 <img src="./images/banking-app.jpg" width="360" height="300" alt="banking app">
