--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
                     </p>
                 </li>
                 <li class="featutes-item">
-                    <h3 class="headline-h3">Punctuality</h3>
+                    <h3 class="section-subheadline">Punctuality</h3>
                     <p class="body-text">Bring the key message to the brand's audience for the best price within the shortest possible time.
                     </p>
                 </li>
                 <li class="featutes-item">
-                    <h3 class="headline-h3">Diligence</h3>
+                    <h3 class="section-subheadline">Diligence</h3>
                     <p class="body-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
                     </p>
                 </li>
                 <li class="featutes-item">
-                    <h3 class="headline-h3">Technologies</h3>
+                    <h3 class="section-subheadline">Technologies</h3>
                     <p class="body-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                     </p>
                 </li>
@@ -92,7 +92,7 @@
                     width="264"
                     height="260"
                     alt="Product designer Mark Guerrero">
-                    <h3 class="headline-h3">Mark Guerrero</h3>
+                    <h3 class="section-subheadline">Mark Guerrero</h3>
                     <p class="body-text">Product Designer</p>
                 </li>
 
@@ -102,7 +102,7 @@
                     width="264"
                     height="260"
                     alt="Frontend developer Tom Ford">
-                    <h3 class="headline-h3">Tom Ford</h3>
+                    <h3 class="section-subheadline">Tom Ford</h3>
                     <p class="body-text">Frontend Developer</p>
                 </li>
 
@@ -122,7 +122,7 @@
                     width="264"
                     height="260"
                     alt="UI designer Daniel Wilson">
-                    <h3 class="headline-h3">Daniel Wilson</h3>
+                    <h3 class="section-subheadline">Daniel Wilson</h3>
                     <p class="body-text">UI Designer</p>
                  </li>
             </ul>
@@ -133,32 +133,32 @@
             <ul class="portfolio-list">
             <li class="portfolio-item">
                 <img src="./images/banking-app.jpg" width="360" height="300" alt="banking app">
-                <h3 class="headline-h3">Banking App</h3>
+                <h3 class="section-subheadline">Banking App</h3>
                 <p class="body-text">App</p>
             </li>
             <li class="portfolio-item">
                 <img src="./images/cashless-payment.jpg" width="360" height="300" alt="cashless payment">
-                <h3 class="headline-h3">Cashless Payment</h3>
+                <h3 class="section-subheadline">Cashless Payment</h3>
                 <p class="body-text">Marketing</p>
             </li>
             <li class="portfolio-item">
                 <img src="./images/meditation-app.jpg" width="360" height="300" alt="meditation app">
-                <h3 class="headline-h3">Meditation App</h3>
+                <h3 class="section-subheadline">Meditation App</h3>
                 <p class="body-text">App</p>
             </li>
             <li class="portfolio-item">
                 <img src="./images/taxi-service.jpg" width="360" height="300" alt="taxi">
-                <h3 class="headline-h3">Taxi Service</h3>
+                <h3 class="section-subheadline">Taxi Service</h3>
                 <p class="body-text">Marketing</p>
             </li>
             <li class="portfolio-item">
                 <img src="./images/screen-illustrations.jpg" width="360" height="300" alt="Smartphone">
-                <h3 class="headline-h3">Screen Illustrations</h3>
+                <h3 class="section-subheadline">Screen Illustrations</h3>
                 <p class="body-text">Design</p>
             </li>
             <li class="portfolio-item">
                 <img src="./images/online-courses.jpg" width="360" height="300" alt="Girl smiling">
-                <h3 class="headline-h3">Online Courses</h3>
+                <h3 class="section-subheadline">Online Courses</h3>
                 <p class="body-text">Marketing</p>
             </li>
             </ul>
