--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <h2 class="section-headline">Services</h2>
             <ul class="features-list">
                 <li class="featutes-item">
-                    <h3 class="headline-h3">Strategy</h3>
+                    <h3 class="section-subheadline">Strategy</h3>
                     <p class="body-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
@@ -112,7 +112,7 @@
                     width="264"
                     height="260"
                     alt="Marketing employee Camila Garcia">
-                    <h3 class="headline-h3">Camila Garcia</h3>
+                    <h3 class="section-subheadline">Camila Garcia</h3>
                     <p class="body-text">Marketing</p>
                 </li>
 
